--- a/Loading/spring/spring/src/main/resources/application.yml
+++ b/Loading/spring/spring/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://fightingdb.cpjoecndwukn.ap-northeast-2.rds.amazonaws.com:3306/study
+    url: jdbc:mysql://localhost:3306/study3
     username: root
-    password: 01025309260
+    password: Abcd123@
     driver-class-name: com.mysql.cj.jdbc.Driver
   sql:
     init:
@@ -15,5 +15,5 @@ spring:
         format_sql: true
         use_sql_comments: true
         hbm2ddl:
-          auto: create
+          auto: update
         default_batch_fetch_size: 1000
