--- a/Loading/spring/spring/src/main/resources/application.yml
+++ b/Loading/spring/spring/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/study3
+    url: jdbc:mysql://fightingdb.cpjoecndwukn.ap-northeast-2.rds.amazonaws.com:3306/study
     username: root
-    password: Abcd123@
+    password: 01025309260
     driver-class-name: com.mysql.cj.jdbc.Driver
   sql:
     init:
